--- a/Assets/Html/NoMessages.Html
+++ b/Assets/Html/NoMessages.Html
@@ -1,3 +1,4 @@
 ﻿<div class="noMessages">
-    <span>Looks like it is your first time.</span>
+    <span class="noMessagesHeader">You are starting a new conversation</span>
+    <span>Type your first message below</span>
 </div>
