--- a/Assets/Html/contact.html
+++ b/Assets/Html/contact.html
@@ -1,9 +1,9 @@
 <div class="contact">
     <div class="avatar-container">
         <img src="${Avatar}" class="avatar" />
-        <div id="statusBadge" class="status" />
+        <div id="statusBadge" class="status"></div>
     </div>
-    <div>
+    <div style="flex-grow:1;">
         <div class="container">
             <div class="contact-info">
                 <div class="nameAndInfo">
