--- a/Assets/Html/contactInfo.html
+++ b/Assets/Html/contactInfo.html
@@ -3,7 +3,7 @@
         <img class='photo' src='${Photo}' />
         <div class="name">${Name}</div>
         <div id="lnkEmail" class="email">${Email}</div>
-        <div class="separator" />
+        <div class="separator"></div>
         <div class="button-panel">
             <img id="btnPhoneCall" src="PhoneCall" class="button">
             <img id="btnVideoCall" src="VideoCall" class="button">
