--- a/Assets/Html/message.html
+++ b/Assets/Html/message.html
@@ -6,6 +6,7 @@
         <div class="textAndMore">
             <div class='text'>${Text}</div>
             <img id="btnMore" class='more' src='Menu' />
+            <img id="btnLike" class='like' src='Like' hidden />
         </div>
     </div>
 </div>
