--- a/Assets/Html/signin.html
+++ b/Assets/Html/signin.html
@@ -9,5 +9,5 @@
     <p>or use your account</p>
     <input name="pwdEdit" class="pwdInput" />
     <div id="btnSignIn" class='button'>Sign In</div>
-    <p class="aux">*You can press Escape to ignore this step in this demo</p>
+    <p class="aux">*You can press Escape to ignore this step</p>
 </div>
