--- a/Assets/Html/toolbar.html
+++ b/Assets/Html/toolbar.html
@@ -1,12 +1,12 @@
 <div class='toolBar'>
     <div class='contactName'>${UserName}</div>
     <div class='buttonPanel'>
-        <img id="btnPhoneCall" src='PhoneCall' class='button' />
-        <img id="btnVideoCall" src='VideoCall' class='button' />
-        <img id="btnContact" src='Contact' class='button' />
+        <img id="btnPhoneCall" src='PhoneCall' class='button' title="Phone Call" />
+        <img id="btnVideoCall" src='VideoCall' class='button' title="Video Call"/>
+        <img id="btnContact" src='Contact' class='button' title="Show Contact Info"/>
         <div class='separator-Container'>
             <div class='separator'></div>
         </div>
-        <img id="btnUser" src='User' class='button' />
+        <img id="btnUser" src='User' class='button' title="Show User Info"/>
     </div>
 </div>
